<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <!-- Общие и временные строки (для заглушек в ранних эпиках) -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_filter_country">Экран фильтрации по стране</string>
    <string name="name_favourites">Экран избранного</string>
    <string name="name_filter">Экран фильтрации</string>
    <string name="name_filter_industry">Экран фильтрации по отрасли работы</string>
    <string name="name_main">Главный экран - Экран поиска вакансий</string>
    <string name="name_filter_region">Экран фильтрации по региону</string>
    <string name="name_team">Экран команды</string>
    <string name="name_vacancy_details">Экран детали вакансии</string>
    <string name="name_filter_workplace">Экран фильтрации по месту работы</string>
    <string name="title_main">Главная</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_team">Команда</string>

    <!-- Разработчики -->
    <string name="sinty">Сентябрина Тришина</string>
    <string name="kit_leskinen">Никита Лескинен</string>
    <string name="s_ter">Сергей Теряев</string>
    <string name="capitan_latam">Алексей Полинкин</string>

    <!-- Заголовки экранов -->
    <string name="main_header">Поиск вакансий</string>
    <string name="filter_header">Настройки фильтрации</string>
    <string name="workplace_header">Выбор места работы</string>
    <string name="industry_header">Выбор отрасли</string>
    <string name="country_header">Выбор страны</string>
    <string name="region_header">Выбор региона</string>
    <string name="vacancy_details_header">Вакансия</string>
    <string name="favorites_header">Избранное</string>
    <string name="team_header">Команда</string>

    <!-- Тексты экранов -->
    <string name="inventors">Над приложением работали</string>
    <string name="empty_list">Список пуст</string>
    <string name="error_list">Не удалось получить список вакансий</string>
    <string name="favorites_placeholder">Favorites placeholder</string>
    <string name="hint_edit_text">Введите запрос</string>
    <string name="vacancy_name_default">Название вакансии длинное допустим ааа</string>
    <string name="vacancy_salary_default">100 000</string>
    <string name="experience_needed">Требуемый опыт</string>
    <string name="experience_sample">Опыт 1</string>
    <string name="experience_description_default">Полная занятость, Удалённая работа</string>
    <string name="vacancy_descr">Описание вакансии</string>
    <string name="responsibilities_title">Обязанности</string>
    <string name="responsibilities_description_default">" • Разрабатывать новую функциональность приложения\n • Помогать с интеграцией нашего SDK в другие приложения"</string>
    <string name="element_text_default">Разработка</string>
    <string name="vacancy_Requirements">Требования</string>
    <string name="vacancy_skills">Ключевые навыки</string>
    <string name="requirements_title">Требования</string>
    <string name="conditions_title">Условия</string>
    <string name="company_name">Company Name</string>
    <string name="city">City</string>
    <string name="found_vacancies_count">Найдено %1$d вакансий</string>
    <string name="nothing_found">Не удалось получить\nсписок вакансий</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="no_vacancies_title">Таких вакансий нет</string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="share_vacancy">Поделиться вакансией</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="salary_input">Введите сумму</string>
    <string name="salary_hint">Ожидаемая зарплата</string>
    <string name="only_with_salary">Не показывать без зарплаты</string>
    <string name="apply_button">Применить</string>
    <string name="delete_button">Сбросить</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choose">Выбрать</string>
    <string name="edit_region">Введите регион</string>
    <string name="no_region">Такого региона нет</string>
    <string name="error_region">Не удалось получить список</string>
    <string name="industry_not_found">Отрасль не найдена</string>

    <!-- Тексты для описаний блоков в разметках -->
    <string name="image_view_details_descr">The same image as at the main screen</string>
    <string name="liked_header">Добавление в избранное</string>
    <string name="share_header">Поделиться</string>
    <string name="responsibilities_text">Как будто здесь есть текст и его очень много прям вообще много, чтобы он на несколько строк расходился\nЕщё строка текста\nИ ещё одна</string>
    <string name="requirements_text">Какие-то требования</string>
    <string name="conditions_text">Какие-то условия\nУсловия номер два</string>
    <string name="skills_text">Верстать экраны\nПить чай без сахара</string>
    <string name="vacancy_denied">Вакансия не найдена или\nудалена</string>
    <string name="salary_not_specified">Зарплата не указана</string>

    <string name="share_vacancy_title">Интересная вакансия</string>
    <string name="share_vacancy_default">Посмотрите эту интересную вакансию!</string>
    <string name="choose_email_app">Выберите почтовое приложение</string>
    <string name="no_email_app">Почтовое приложение не найдено</string>
    <string name="no_phone_app">Приложение для звонков не найдено</string>
    <string name="contacts_default_text">+7 999 999 99 99\n+593 151 153 96 65</string>
    <string name="vacancy_contacts">Контакты</string>
    <string name="email_default_text">my.awesome.email@gmail.com\njust-another-fkng-email@gmail.com</string>
    <string name="choose_phone_number">Выберите номер телефона</string>
    <string name="cancel">Отмена</string>
    <string name="email_icon">"📧 "</string>
    <string name="industry_input">Введите отрасль</string>
    <string name="choose_button">Выбрать</string>
    <string name="find_or_clean">find or clean</string>
    <string name="checkbox">checkbox</string>
    <string name="item_industry_description">IT</string>
    <string name="no_list_of_industries">Не удалось получить список</string>
    <string name="industries_does_nt_exist">When a list of industries does\'nt exist</string>
    <string name="do_search">do search</string>
    <string name="initial_placeholder">initial placeholder</string>
    <string name="industry_loading_error">Ошибка загрузки отраслей</string>
    <string name="share_vacancy_with_link">Интересная вакансия: %1$s\n%2$s</string>
    <string name="share_vacancy_without_link">Интересная вакансия: %1$s</string>
    <string name="choose_email_client">Выберите почтовое приложение</string>
    <string name="no_dialer_app">Нет доступных приложений для вызова</string>
</resources>
