<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filterworkplace.ui.WorkplaceFragment">

    <!-- Вертикальные Guideline слева и справа -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16" />

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/OurCommonToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/workplace_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/padding_16"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/workplaceEdit"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/region"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:hint="@string/region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/industryEdit"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/height_59"
        android:layout_marginHorizontal="@dimen/padding_17"
        android:layout_marginBottom="@dimen/padding_24"
        android:backgroundTint="@color/blue"
        android:text="@string/choose"
        android:textAppearance="@style/TextMedium16"
        android:textColor="@color/white_universal"
        android:visibility="gone"
        app:cornerRadius="@dimen/radius_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
