<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filterregion.ui.RegionFragment">

    <!-- Вертикальные Guideline слева и справа -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16" />

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/OurCommonToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/region_header" />

    <EditText
        android:id="@+id/editText"
        style="@style/EditText"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/tb_height"
        android:layout_marginTop="@dimen/padding_8"
        android:hint="@string/edit_region"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="56dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageButton
        android:id="@+id/btnEditAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="center"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/editText"
        app:layout_constraintEnd_toEndOf="@id/editText"
        app:layout_constraintTop_toTopOf="@id/editText"
        app:tint="@color/black_universal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/regionRecyclerView"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="@dimen/padding_16"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/editText"
        tools:listitem="@layout/country_item" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="@dimen/vacancy_icon_shape_size"
        android:layout_height="@dimen/vacancy_icon_shape_size"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="223dp"
        android:src="@drawable/fav_error_cat_meme"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <TextView
        android:id="@+id/placeholderText"
        style="@style/TextMedium22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/no_region"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/placeholderImage" />
</androidx.constraintlayout.widget.ConstraintLayout>

